# lightcone-cli

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  design_review.md  justfile  pyproject.toml  redesign.md  wrangler.jsonc  zensical.toml
.github/scripts/: parse_eval_results.py
.github/workflows/: check-docs.yml  claude-code-review.yml  dco.yml  docs-deploy.yml  eval.yml  lint.yml  pypi-publish.yaml  tests.yml
claude/lightcone/: hooks.json
claude/lightcone/agents/: lc-extractor.md
claude/lightcone/guides/: astra-reference.md  lightcone-cli-reference.md  ui-brand.md
claude/lightcone/hooks/: langfuse_git_commit_hook.py  langfuse_hook.py  langfuse_prepare_commit_msg.py  langfuse_session_init_hook.py
claude/lightcone/scripts/: activate-venv.sh  check-lc-run.sh  session-start.sh  validate-on-save.sh
claude/lightcone/skills/: README.md
claude/lightcone/skills/astra/: SKILL.md
claude/lightcone/skills/check-sentence-by-sentence/: SKILL.md
claude/lightcone/skills/figure-comparison/: SKILL.md
claude/lightcone/skills/lc-build/: SKILL.md
claude/lightcone/skills/lc-cli/: SKILL.md
claude/lightcone/skills/lc-feedback/: SKILL.md
claude/lightcone/skills/lc-from-code/: SKILL.md
claude/lightcone/skills/lc-from-paper/: SKILL.md
claude/lightcone/skills/lc-migrate/: SKILL.md
claude/lightcone/skills/lc-new/: SKILL.md
claude/lightcone/skills/lc-verify/: SKILL.md
claude/lightcone/skills/narrative/: SKILL.md
claude/lightcone/skills/paper-extraction/: SKILL.md
claude/lightcone/skills/ralph/: SKILL.md
claude/lightcone/templates/: CLAUDE.md
claude/prism/agents/: prism-extractor.md
claude/prism/guides/: astra-reference.md  decision-guide.md  prism-reference.md
claude/prism/hooks/: langfuse_hook.py  langfuse_utils.py
claude/prism/scripts/: activate-venv.sh  check-prism-run.sh  hpc-guard.sh  hpc-session-start.sh  session-start.sh  validate-on-save.sh
claude/prism/skills/: ui-brand.md
claude/prism/skills/prism-build/: SKILL.md
claude/prism/skills/prism-feedback/: SKILL.md
claude/prism/templates/: CLAUDE.md
codex/lightcone/prompts/: lc-from-code.md  lc-new.md
codex/lightcone/templates/: AGENTS.md
docs/: architecture.md  index.md  maintainer.md
docs/api/: assets.md  cli.md  container.md  dask_cluster.md  dask_executor.md  index.md  io_manager.md  manifest.md  runner.md  site_registry.md  snakefile.md  status.md  targets.md  tree.md  validation.md  verify.md
docs/cli/: build.md  dev.md  export.md  index.md  init.md  run.md  schematics.html  schematics.md  setup.md  status.md  target.md  update.md  verify.md
docs/contributing/: backends.md  hpc-sites.md  setup.md  testing.md
docs/hpc/: containers.md  index.md  site-registry.md  targets.md
docs/plans/: 2026-02-21-dagster-execution-layer-design.md  2026-02-21-dagster-execution-layer-implementation.md  2026-02-23-perlmutter-friction-design.md  2026-02-23-perlmutter-friction-implementation.md  2026-03-01-prism-setup-design.md  2026-03-01-prism-setup-plan.md  2026-03-01-sites-and-profiles-design.md
docs/skills/: authoring.md  check-sentence-by-sentence.md  figure-comparison.md  index.md  lc-build.md  lc-feedback.md  lc-from-code.md  lc-from-paper.md  lc-migrate.md  lc-new.md  lc-verify.md  narrative.md  paper-extraction.md  prism-build.md  prism-feedback.md  prism-migrate.md  prism-new.md  prism-verify.md  ralph.md
docs/stylesheets/: extra.css
docs/telemetry/: hooks.md  index.md  lifecycle.md  opt-out.md
docs/user/: agent-workflow.md  cluster.md  codex.md  getting-started.md  glossary.md  index.md  install.md  multiverse.md  nersc.md  troubleshooting.md  tutorial.md
evals/: Dockerfile.eval  build.yaml
evals/tasks/snae/: .gitignore  CLAUDE.md  astra.yaml  dagster.yaml  task.yaml
src/lightcone/cli/: __init__.py  commands.py  plugin.py
src/lightcone/engine/: __init__.py  assets.py  container.py  dask_cluster.py  manifest.py  runner.py  scratch.py  site_registry.py  slurm_info.py  snakefile.py  status.py  targets.py  tree.py  validation.py  verify.py  wrroc.py
src/lightcone/eval/: __init__.py  build.py  cli.py  graders.py  harness.py  models.py  report.py  sandbox.py
src/prism/: __init__.py  cli.py  container.py  remote.py  updater.py
src/prism/dagster/: __init__.py  assets.py  io_manager.py  profiles.py  runner.py  site_registry.py  sites.py  status.py  targets.py  tree.py
src/prism/eval/: __init__.py  build.py  cli.py  graders.py  harness.py  models.py  report.py  sandbox.py
src/snakemake_executor_plugin_dask/: __init__.py  executor.py
tests/: conftest.py  test_assets.py  test_cli.py  test_cli_run.py  test_container.py  test_dask_cluster.py  test_dask_plugin.py  test_eval_graders.py  test_eval_harness.py  test_eval_models.py  test_eval_report.py  test_eval_tasks.py  test_integration.py  test_io_manager.py  test_manifest.py  test_paper_extraction_caption.py  test_profiles.py  test_remote.py  test_runner.py  test_runner_local.py  test_runner_venv.py  test_scratch.py  test_site_registry.py  test_sites.py  test_slurm_info.py  test_snakefile.py  test_status.py  test_targets.py  test_tree.py  test_validation.py  test_verify.py  test_wrroc.py
(+40 files in other folders)
