[project]
name = "prism"
dynamic = ["version"]
description = "Lightcone Research's ASTRA-compliant Agentic Layer"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Lightcone Research" }
]
keywords = ["science", "analysis", "agentic", "specification", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "astra @ git+https://github.com/LightconeResearch/ASTRA.git",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-docker>=0.25",
    "langfuse>=2.0",
]

[project.optional-dependencies]
eval = [
    "anthropic>=0.40",
    "daytona-sdk>=0.140",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
prism = "prism.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.hatch.build.targets.wheel.force-include]
"claude/prism" = "prism/claude/prism"

[tool.hatch.build.targets.sdist]
include = ["src/prism", "claude/prism"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
