[project]
name = "lightcone-cli"
dynamic = ["version"]
description = "Lightcone command-line toolchain"
# readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
authors = [
    { name = "Lightcone Research" }
]

dependencies = [
    "astra-tools>=0.2.5",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "snakemake>=9.0",
    "snakemake-interface-executor-plugins>=9.0",
    "snakemake-interface-common>=1.14",
    "dask>=2024.1",
    "distributed>=2024.1",
    "langfuse>=2.0",
    "rocrate>=0.11",
]

[dependency-groups]
eval = [
    "anthropic>=0.40",
    "build>=1.0",
    "daytona-sdk>=0.140",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
]
docs = [
    "zensical>=0.0.33",
]


[project.scripts]
lc = "lightcone.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
    "src/lightcone",
    "src/snakemake_executor_plugin_dask",
]

[tool.hatch.build.targets.wheel.force-include]
"claude/lightcone" = "lightcone/cli/claude/lightcone"

[tool.hatch.build.targets.sdist]
include = [
    "src/lightcone",
    "src/snakemake_executor_plugin_dask",
    "claude/lightcone",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["dask.*", "distributed.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["rocrate.*", "astra.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that spin up real subsystems (dask cluster, etc.) — opt-in via -m slow",
]
